--- a/index.html
+++ b/index.html
@@ -3,47 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pica e New Yorkut</title>
+    <title>Pica Restaurant</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Mirësevini në Pica e New Yorkut</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">Rreth Nesh</a></li>
-                <li><a href="#menu">Menyja</a></li>
-                <li><a href="#gallery">Galeria</a></li>
-                <li><a href="#contact">Kontaktoni</a></li>
-            </ul>
-        </nav>
+        <div class="hero">
+            <h1>Mirë se vini në Pica Restaurant</h1>
+            <p>Restoranti më i mirë për pizza në qytet!</p>
+            <a href="#menu" class="btn">Shikoni Menunë</a>
+        </div>
     </header>
-    <main>
-        <section id="about">
-            <h2>Rreth Nesh</h2>
-            <p>Pica e New Yorkut është restoranti më i mirë për picë në qytet. Ne përdorim përbërësit më të freskët për të krijuar pica të shijshme.</p>
-        </section>
-        <section id="menu">
-            <h2>Menyja</h2>
-            <ul>
-                <li>Pica Margherita</li>
-                <li>Pica Pepperoni</li>
-                <li>Pica Vegetariana</li>
-                <li>Pica Speciale e Shtëpisë</li>
-            </ul>
-        </section>
-        <section id="gallery">
-            <h2>Galeria</h2>
-            <img src="pizza1.jpg" alt="Pica 1">
-            <img src="pizza2.jpg" alt="Pica 2">
-        </section>
-        <section id="contact">
-            <h2>Kontaktoni</h2>
-            <p>Na kontaktoni në: <a href="mailto:info@picaenewyorkut.com">info@picaenewyorkut.com</a></p>
-        </section>
-    </main>
+    <section id="menu">
+        <h2>Menu</h2>
+        <ul>
+            <li>Pica Margherita - $10</li>
+            <li>Pica Peperoni - $12</li>
+            <li>Pica Vegjetariane - $11</li>
+            <li>Pica Speciale - $15</li>
+        </ul>
+    </section>
+    <section id="gallery">
+        <h2>Galeria Jonë</h2>
+        <img src="pizza1.jpg" alt="Pizza Margherita">
+        <img src="pizza2.jpg" alt="Pizza Peperoni">
+        <img src="pizza3.jpg" alt="Pizza Vegjetariane">
+    </section>
+    <section id="testimonials">
+        <h2>Çfarë thonë klientët tanë</h2>
+        <blockquote>
+            <p>"Pica më e mirë që kam provuar!"
+            <cite>— Klienti i lumtur</cite></p>
+        </blockquote>
+    </section>
     <footer>
-        <p>&copy; 2026 Pica e New Yorkut. Të gjitha të drejtat e rezervuara.</p>
+        <h2>Na Kontaktoni</h2>
+        <p>Email: contact@picarestaurant.com</p>
+        <p>Telefon: +355 123 456 789</p>
     </footer>
 </body>
 </html>
