--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
       🍕 <span id="nav-brand">New York Pizza</span>
      </div>
      <div style="display: flex; align-items: center;">
-      <ul class="nav-links"><a onclick="scrollToSection('menu')" id="nav-menu">Menu</a> <a onclick="scrollToSection('about')" id="nav-about">Rreth Nesh</a> <a onclick="scrollToSection('contact')" id="nav-contact">Na Kontaktoni</a>
+      <ul class="nav-links"><a onclick="scrollToSection('menu')" id="nav-menu">Galeria</a> <a onclick="scrollToSection('about')" id="nav-about">Rreth Nesh</a> <a onclick="scrollToSection('contact')" id="nav-contact">Na Kontaktoni</a>
       </ul>
       <div class="language-switcher"><button class="lang-btn active" onclick="changeLanguage('sq')" id="lang-sq">SQ</button> <button class="lang-btn" onclick="changeLanguage('en')" id="lang-en">EN</button>
       </div>
@@ -439,7 +439,7 @@
      <h2 id="about-title">Rreth Nesh</h2>
      <div class="about-container">
       <div class="about-content">
-       <p id="about-p1">Mirë se vini në New York Pizza, vendi ku tradita ndesh inovacionin! Në zemrën e Shkodër, ne sjellim të njëjtën spirit dhe shijen autentike të picave të famsshme të Nju Jorkut.</p>
+       <p id="about-p1">Mirë se vini në New York Pizza! Në zemrën e Shkodër, ne sjellim të njëjtën spirit dhe shijen autentike të picave të famshme të Nju Jorkut.</p>
        <p id="about-p2">Me më shumë se 15 vite përvojë, ekipi ynë përpunon çdo pice me ingredientë të freskëta. Vizitoni ne sot dhe zbuloni pse jam bërë preferenca e Shkodraneve!</p>
       </div><!-- ========== IMAGE PLACEHOLDER - EDIT THIS ========== --> <!-- Replace the div below with your own image. Example: --> <!-- <img src="your-image-url.jpg" alt="About us" style="width: 100%; height: 300px; border-radius: 8px; object-fit: cover;"> -->
       <div class="about-image" id="about-image-placeholder">
@@ -448,86 +448,65 @@
      </div>
     </section><!-- Menu Section -->
     <section id="menu">
-     <h2 id="menu-title">Menu</h2>
+     <h2 id="menu-title">Galeria</h2>
      <div class="menu-grid">
       <div class="menu-item">
        <div class="menu-image">
-        🍕
+         <img src="image3.jpg" alt="Pizza 1" style="width:100%;height:100%;object-fit:cover;">
        </div>
        <div class="menu-info">
         <h3 id="menu-1-name">Margarita</h3>
         <p id="menu-1-desc">Pica klasike me domate, mozzarella dhe baziliko</p>
-        <div class="price">
-         350 Lek
-        </div>
        </div>
       </div>
       <div class="menu-item">
        <div class="menu-image">
-        🍕
+         <img src="image2.jpg" alt="Pizza 1" style="width:100%;height:100%;object-fit:cover;">
        </div>
        <div class="menu-info">
         <h3 id="menu-2-name">Pepperoni</h3>
         <p id="menu-2-desc">Pica me pepperoni të spikatur dhe mozzarella</p>
-        <div class="price">
-         450 Lek
-        </div>
        </div>
       </div>
       <div class="menu-item">
        <div class="menu-image">
-        🍕
+         <img src="image1.jpg" alt="Pizza 1" style="width:100%;height:100%;object-fit:cover;">
        </div>
        <div class="menu-info">
         <h3 id="menu-3-name">Vegeteriana</h3>
         <p id="menu-3-desc">Pica me zarzavate të freskëta dhe djathë</p>
-        <div class="price">
-         400 Lek
-        </div>
        </div>
       </div>
       <div class="menu-item">
        <div class="menu-image">
-        🍕
+         <img src="image4.jpg" alt="Pizza 1" style="width:100%;height:100%;object-fit:cover;">
        </div>
        <div class="menu-info">
         <h3 id="menu-4-name">BBQ Chicken</h3>
         <p id="menu-4-desc">Pica me pula, bacon dhe sos BBQ</p>
-        <div class="price">
-         480 Lek
-        </div>
        </div>
       </div>
       <div class="menu-item">
        <div class="menu-image">
-        🍕
+         <img src="image5.jpg" alt="Pizza 1" style="width:100%;height:100%;object-fit:cover;">
        </div>
        <div class="menu-info">
         <h3 id="menu-5-name">Katër Djathëra</h3>
         <p id="menu-5-desc">Pica me katër lloje djathi premium</p>
-        <div class="price">
-         500 Lek
-        </div>
        </div>
       </div>
       <div class="menu-item">
        <div class="menu-image">
-        🍕
+         <img src="image6.jpg" alt="Pizza 1" style="width:100%;height:100%;object-fit:cover;">
        </div>
        <div class="menu-info">
         <h3 id="menu-6-name">Special New York</h3>
         <p id="menu-6-desc">Pica ynë e veçantë me përzierje speciale mesataresh</p>
-        <div class="price">
-         550 Lek
-        </div>
        </div>
       </div>
      </div><!-- Menu Display Section -->
      <div class="menu-display-section">
-      <h3 id="menu-display-label" style="font-family: 'Playfair Display', serif; font-size: 1.5rem; color: #dc2626; margin-bottom: 1rem; text-align: center;">Menu Komplet</h3><!-- ========== MENU IMAGE PLACEHOLDER - EDIT THIS ========== --> <!-- Replace the div below with your menu image/PDF. Example: --> <!-- <img src="your-menu-image-url.jpg" alt="Full menu" style="width: 100%; border-radius: 8px;"> -->
-      <div class="menu-display-box" id="menu-display-placeholder">
-       📋
-      </div><!-- ========== END MENU IMAGE PLACEHOLDER ========== -->
+      <h3 id="menu-display-label" style="font-family: 'Playfair Display', serif; font-size: 1.5rem; color: #dc2626; margin-bottom: 1rem; text-align: center;">Menu</h3><!-- ========== MENU IMAGE PLACEHOLDER - EDIT THIS ========== --> <!-- Replace the div below with your menu image/PDF. Example: --> <img src="menu.jpg" alt="Full menu" style="width: 100%; border-radius: 8px;">
      </div>
     </section><!-- Contact Section -->
     <section id="contact">
@@ -538,21 +517,21 @@
         📱
        </div>
        <h3 id="contact-phone-label">Telefoni</h3>
-       <p id="phone">+355 69 XXX XXXX</p>
+       <p id="phone">+355 67 707 0071</p>
       </div>
       <div class="contact-item">
        <div class="contact-item-icon">
         📍
        </div>
        <h3 id="contact-address-label">Adresa</h3>
-       <p id="address">Shkodër, Shqipëri</p>
+       <p id="address">Sheshi Demokracia, Shkodër, Shqipëri</p>
       </div>
       <div class="contact-item">
        <div class="contact-item-icon">
         ⏰
        </div>
        <h3 id="contact-hours-label">Orët e Punës</h3>
-       <p id="hours">E hënë - E diel: 11:00 - 23:00</p>
+       <p id="hours">E hënë - E diel: 9:00 - 23:00</p>
       </div>
      </div>
     </section>
@@ -569,17 +548,17 @@
         const translations = {
             sq: {
                 'nav-brand': 'New York Pizza',
-                'nav-menu': 'Menu',
+                'nav-menu': 'Galeria',
                 'nav-about': 'Rreth Nesh',
                 'nav-contact': 'Na Kontaktoni',
                 'hero-title': 'New York Pizza',
                 'hero-subtitle': 'Pica autentike ne zemer te Shkodres',
                 'btn-order': 'Porosit Tani',
                 'about-title': 'Rreth Nesh',
-                'about-p1': 'Mirë se vini në New York Pizza, vendi ku tradita ndesh inovacionin! Në zemrën e Shkodër, ne sjellim të njëjtën spirit dhe shijen autentike të picave të famsshme të Nju Jorkut.',
+                'about-p1': 'Mirë se vini në New York Pizza! Në zemrën e Shkodër, ne sjellim të njëjtën spirit dhe shijen autentike të picave të famshme të Nju Jorkut.',
                 'about-p2': 'Me më shumë se 15 vite përvojë, ekipi ynë përpunon çdo pice me ingredientë të freskëta. Vizitoni ne sot dhe zbuloni pse jam bërë preferenca e Shkodraneve',
-                'menu-title': 'Menu',
-                'menu-display-label': 'Menu Komplet',
+                'menu-title': 'Galeria',
+                'menu-display-label': 'Menu',
                 'menu-1-name': 'Margarita',
                 'menu-1-desc': 'Pica klasike me domate, mozzarella dhe baziliko',
                 'menu-2-name': 'Pepperoni',
@@ -601,7 +580,7 @@
             },
             en: {
                 'nav-brand': 'New York Pizza',
-                'nav-menu': 'Menu',
+                'nav-menu': 'Galeria',
                 'nav-about': 'About Us',
                 'nav-contact': 'Contact Us',
                 'hero-title': 'New York Pizza',
@@ -610,8 +589,8 @@
                 'about-title': 'About Us',
                 'about-p1': 'Welcome to New York Pizza, where tradition meets innovation! In the heart of Shkodër, we bring the same spirit and authentic taste of the famous New York pizzas.',
                 'about-p2': 'With over 15 years of experience, our team crafts every pizza with fresh, quality ingredients. Visit us today and discover why we\'ve become the preference of Shkodër residents!',
-                'menu-title': 'Menu',
-                'menu-display-label': 'Full Menu',
+                'menu-title': 'Galeria',
+                'menu-display-label': 'Menu',
                 'menu-1-name': 'Margarita',
                 'menu-1-desc': 'Classic pizza with tomato, mozzarella and basil',
                 'menu-2-name': 'Pepperoni',
