--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
        <p id="about-p2">Me më shumë se 15 vite përvojë, ekipi ynë përpunon çdo pice me ingredientë të freskëta. Vizitoni ne sot dhe zbuloni pse jam bërë preferenca e Shkodraneve!</p>
       </div><!-- ========== IMAGE PLACEHOLDER - EDIT THIS ========== --> <!-- Replace the div below with your own image. Example: --> <!-- <img src="your-image-url.jpg" alt="About us" style="width: 100%; height: 300px; border-radius: 8px; object-fit: cover;"> -->
       <div class="about-image" id="about-image-placeholder">
-       📸
+        <img src="hero.jpeg" alt="hero image" style="width:100%;height:100%;object-fit:cover;">
       </div><!-- ========== END IMAGE PLACEHOLDER ========== -->
      </div>
     </section><!-- Menu Section -->
