--- a/index.html
+++ b/index.html
@@ -347,13 +347,17 @@
 
         /* Responsive */
 @media (max-width: 768px) {
-    .about-image {
-        width: 100%;
-        height: 300px;
+    .about-container {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .about-image img {
+        width: 70%;
+        margin-top: 1rem;
     }
 }
-
-
             .nav-links {
                 gap: 1rem;
                 font-size: 0.9rem;
